# HW_02

./: bot.py  dockerfile  logs.txt  main_app.py  pyproject.toml
