[tool.poetry]
name = "app-saitov"
version = "0.1.0"
description = ""
authors = ["Collapse_dll <rassskoll@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
